k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hello
  labels:
    app.kubernetes.io/name: node-hello
    app.kubernetes.io/part-of: argocd-node-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: node-hello
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-hello
        app.kubernetes.io/part-of: argocd-node-hello
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      automountServiceAccountToken: false
      containers:
      - name: node-hello
        image: node-hello:0.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
            ephemeral-storage: 128Mi
          limits:
            cpu: 250m
            memory: 128Mi
            ephemeral-storage: 256Mi
