k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hello
  labels:
    app.kubernetes.io/name: node-hello
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: node-hello
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
