k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-hello
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-hello
            port:
              number: 80
